working on diagnostics

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -41,13 +41,13 @@ Commercial landings of sardine are known for strong year-to-year fluctuations. A
 # Introduction {-}
 
 <!-- small pelagics are influenced by the environment -->
-Environmental variability is known to be a key driver of population variability of small forage fish such as sardines, anchovy and herring [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In particular, ocean temperature and upwelling dynamics, along with density-dependent feedback, have been identified as important in affecting recruitment success and biomass of European and Pacific sardines  (*Sardina pilchardus* and *Sardinops sagax*) [@JacobsonMacCall1995; @RykaczewskiCheckley2008; @Alheitetal2012; @LindegrenCheckley2012; @Lindegrenetal2013]. Like other sardines, the Indian oil sardines show strong interannual fluctuations and larger decadal booms and busts. The Indian oil sardine offers an instructive case study to investigate the effects of environmental variability, particularly temperature and upwelling dynamics, as they occupy an ocean system that is warmer than that occupied by other sardines and have a strong seasonal cycle driven by the Indian summer monsoon.
+Environmental variability is known to be a key driver of population variability of small forage fish such as sardines, anchovy and herring [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In particular, ocean temperature and upwelling dynamics, along with density-dependent feedback, have been identified as important in affecting recruitment success and biomass of European and Pacific sardines  (*Sardina pilchardus* and *Sardinops sagax*) [@JacobsonMacCall1995; @RykaczewskiCheckley2008; @Alheitetal2012; @LindegrenCheckley2012; @Lindegrenetal2013; @Garza-Giletal2015]. Like other sardines, the Indian oil sardines show strong interannual fluctuations and larger decadal booms and busts. The Indian oil sardine offers an instructive case study to investigate the effects of environmental variability, particularly temperature and upwelling dynamics, as they occupy an ocean system that is warmer than that occupied by other sardines and have a strong seasonal cycle driven by the Indian summer monsoon.
 
 <!-- indian oil sardine is important -->
 The Indian oil sardine (*Sardinella longiceps* Valenciennes, 1847) is one of the most commercially important fish resources along the southwest coast of India (Figure `r ref("fig:studyarea")`) and historically has comprised approximately 25% of the catch biomass [@Vivekanandanetal2003].  Landings of the Indian oil sardine are highly seasonal, peaking after the summer monsoon period in October-December and reaching a nadir in spring before the summer monsoon in April-June (Figure `r ref("fig:catch")`). At the same time, the landings of this small pelagic finfish are highly variable from year to year.  Small pelagics are well known to exhibit high variability in biomass due to the effects of environmental conditions on survival and recruitment [@Bakun1996; @AlheitHagen1997; @Curyetal2000; @Checkleyetal2017].  In this fishery, however, environmental conditions also affect exposure of sardines to the fishery.  Until recently, the Indian oil sardine fishery was artisanal and based on small human or low powered boats with no refrigeration. The fishery was confined to nearshore waters, and thus migration of sardines in and out of the coastal zone greatly affected exposure to the fishery.
 
 <!-- review of looking at env vars -->
-Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine in order to understand the factors that drive landings variability. Precipitation during the southwest monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue, as an index of other climatic conditions, for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002].  Many studies have looked for correlations between precipitation, however the reported effects are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity, such as sea level at Cochin [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011], salinity and bottom sea temperature [@Krishnakumaretal2008], and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @PitchaikaniLipton2012; @Menonetal2019].  Researchers have also found correlations with near-shore sea surface temperature (SST)  [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991; @Suprabaetal2016]. SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery. The multi-year average sea temperature is postulated to have effects on recruitment and the survival of larval and juvenile sardines, which affect the later  overall abundance [@Takasukaetal2007; @Checkleyetal2017]. The El Ni\~{n}o/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) which in turn impact oil sardines, and correlations have been found between ENSO indices and landings [@Suprabaetal2016; @Rohitetal2018] and coastal anoxia events in the fall [@Vallivattathillametal2017].
+Researchers have examined a variety of environmental variables for their correlation with landings of the Indian oil sardine in order to understand the factors that drive landings variability. Precipitation during the southwest monsoon and the day of the monsoon arrival are thought to act as either a direct or indirect cue, as an index of other climatic conditions, for spawning [@MurtyEdelman1966; @AntonyRaja1969; @AntonyRaja1974; @Srinath1998; @Jayaprakash2002; @XuBoyce2009; @PitchaikaniLipton2012].  Although many studies have looked for and some have found correlations between precipitation and landings, the reported relationships are positive in some studies and negative in others [@Madhupratapetal1994]. Researchers have also looked for and found correlations with various metrics of upwelling intensity, such as sea level at Cochin [@MurtyEdelman1966; @LonghurstWooster1990; @Madhupratapetal1994; @Srinath1998; @Jayaprakash2002; @Thara2011], salinity and bottom sea temperature [@Krishnakumaretal2008], and with direct measures of productivity, such as nearshore zooplankton and phytoplankton abundance [@Hornell1910; @Nair1952; @NairSubrahmanyan1955; @Madhupratapetal1994; @Georgeetal2012; @Piontkovskietal2015; @PitchaikaniLipton2012; @Menonetal2019].  Researchers have also found correlations of landings with near-shore sea surface temperature (SST)  [@Annigeri1969; @PrabhuDhulkhed1970; @Pillai1991; @Suprabaetal2016]. SST  can affect both somatic growth rates and juvenile survival but also can cause fish to move off-shore and away from the shore-based fishery. The multi-year average sea temperature is postulated to have effects on recruitment and the survival of larval and juvenile sardines, which affect the later  overall abundance [@Takasukaetal2007; @Checkleyetal2017]. The El Ni\~{n}o/Southern Oscillation (ENSO) has a cascading effect on all the aforementioned environmental parameters (SST, precipitation, upwelling) which in turn impact oil sardines, and correlations have been found between ENSO indices and landings [@Suprabaetal2016; @Rohitetal2018] and coastal anoxia events in the fall [@Vallivattathillametal2017].
 
 <!--
 Mury and Edelman used atmospheric presure differential as the metric of monsoon intensity and found a different pattern. Effect of monsoon was negative up to a theshold and then effect was positive after that. They gave a weird explaination. Low DO was bad up to the theshold but after threshold, it increased producivity. Used 1928-1955 landings.
